# ToySlam

./: .gitignore  CMakeLists.txt  README.md  cmds.txt  conanfile.txt
cpp/: CMakeLists.txt  cmds.txt  conanfile.txt
cpp/app/: CMakeLists.txt  GraphHandler.h  main.cpp
cpp/core/: TypeDef.h
cpp/core/conn/: ConnectionHandlerBase.h  ConnectionManagerClient.h  ConnectionManagerServer.h  SharedFromBase.h
cpp/core/matrix/: MatrixHandler.h
cpp/graph/: BaseEdge.h  BaseVertex.h  EdgeSe2.cpp  EdgeSe2.h  EdgeSe2Point2d.cpp  EdgeSe2Point2d.h  Graph.h  GraphDeserializer.h  GraphOptimizer.h  GraphSerializer.h  Helper.h  Types.h  Vertex2d.h  VertexSe2.h
python/: environment.py  lidar_sensor.py  slam_main.py  tools.py  vis.py
python/graph/: demo_opt.py  edges2d.py  graph2d.py  graph2d_optimizer.py
python/optimizer/: edges2d.py  graph_optimizer.py  opt_graph.py  vertices.py
python/remote/: bytes_to_graph.py  graph_client.py  graph_to_bytes.py
python/slam/: graph2d.py  slam_helper.py
python/view/: graph_view_2d.py  robot_view_2d.py
remote/: CMakeLists.txt
remote/app/: CMakeLists.txt  ConnectionHandler.h  ConnectionHandlerGraph.h  GraphManager.h  main.cpp  pch.h
remote/conn/: ConnectionHandlerBase.h  ConnectionManagerServer.h
remote/cuda/: CMakeLists.txt  Helper.h
remote/cuda/graph/: BaseEdgeGpu.h  BaseVertexGpu.h  GpuMatrixDynamic.h  GraphGpu.h  VertexStorageGpu.h
remote/cuda/optimizer/: OptimizerGpu.h
remote/cuda/optimizer/kernels/: KernelCommon.cu  KernelCommon.cuh  KernelHelper.cuh  KernelSe2.cu  KernelSe2Point2.cu  OptimizerGpu.cu
remote/cuda/serialization/: DeserializeGraphFuncGpu.h  SerializeGraphFuncGpu.h
remote/cuda/solver/: SolverCudaOps.cpp  SolverCudaOps.h  SolverCudaQr.h
remote/graph/: CMakeLists.txt  GraphCpu.h  Helper.h  IGraph.h  IMatrix.h  MatrixEigen.h  TemplInsts.cpp  Types.h
remote/graph/edge/: BaseEdgeCpu.h  EdgeSe2.h  EdgeSe2Point2d.h  EdgeType.h
remote/graph/vertex/: BaseVertexCpu.h  Vertex2d.h  VertexSe2.h  VertexType.h
remote/optimizer/: IOptimizer.h  OptimizerCpu.h  ThreadPool.cpp  ThreadPool.h
remote/serialization/: CMakeLists.txt  DeserializeGraph.h  DeserializeGraphFuncCpu.h  SerializeGraph.h  SerializeGraphFuncCpu.h  SerializeHelper.cpp  SerializeHelper.h
remote/solver/: ISolver.h  SolverCpuMatWithCuda.h  SolverEigen.h
remote/tools/: BlockTimer.cpp  BlockTimer.h  CMakeLists.txt
