cmake_minimum_required(VERSION 3.29.2)

project(RemoteGraphOpt LANGUAGES CXX CUDA)
set(CMAKE_CUDA_STANDARD 20)

set(PROJECT_ROOT_DIR ${CMAKE_CURRENT_SOURCE_DIR})
# set(WITH_CUDA ON)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)

add_subdirectory(remote)